site/styles/_nav.scss
// Navigation Container
.navigation {
  position: absolute;
  z-index: 9;
  width: 100%;
  top: 0;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
  @extend .top-gradient-bg;
}
// Navbar
.navbar {
  padding: 20px 0 0 0;
  background-color: transparent;
  @include media-breakpoint-up(md) {
    padding-top: 20px;
  }
  li.active {
    border-bottom: 4px solid $navbar-dark-active-color;
  }
  .user-anon {
    padding: 0 10px;
  }
  .btn-signup,
  .btn-signin {
    margin-bottom: 0;
    @include media-breakpoint-down(sm) {
      width: 50%;
      margin-bottom: $navbar-padding-y * 2;
    }
  }
}
.navbar-nav {
  margin-left: auto;
  background: $navbar-background-color;

  @include media-breakpoint-up(md) {
    background: transparent;
    padding-right: 20px;
  }
  s72-user-anon {
    white-space: nowrap;
  }
  .nav-link {
    font-weight: 800;
    font-size: 14px;
    @extend .animate-this;
    @include media-breakpoint-up(md) {
      padding-top: $navbar-padding-y * 4;
      padding-bottom: $navbar-padding-y * 4;
    }
    @include media-breakpoint-up(xxxl) {
      font-size: 18px;
    }
    @include hover-focus {
      @extend .animate-this;
    }
  }
  .s72-username {
    max-width: 100px; //arbituary
    overflow-x: hidden;
    display: inline-block;
    text-overflow: ellipsis;
    vertical-align: bottom;
    white-space: nowrap;
  }
}
//
.navbar-brand {
  min-width: $navbar-brand-min-width;
  z-index: 9;
  margin-left: 20px;
  background: url('../images/common/logo.png') left center/100% no-repeat;
  @extend .text-hide;
  @media only screen and (-webkit-min-device-pixel-ratio: 2),only screen and (min-resolution: 192dpi) {
    background: url("../images/common/logo@2x.png") left center/100% no-repeat;
  }
  @include media-breakpoint-up(md) {
    min-width: $navbar-brand-min-width-md;
  }
  @include media-breakpoint-up(lg) {
    min-width: $navbar-brand-min-width-xl;
  }
  @include media-breakpoint-up(xl) {
    min-width: $navbar-brand-min-width-xl;
  }
}

// Hamburger Menu Icon
.navbar-toggler {
  z-index: 9;
  margin-right: 10px;
  border: 0 none;
}
// Unsure what these do
.primary-nav-item,
.primary-nav-dropdown {
  @extend .nav-item;
  @extend .active;
}
.primary-nav-item {
  display: none;
  @extend .d-md-block;
}
.primary-nav-dropdown {
  @extend .d-md-none;
  .s72-dropdown-menu {
    background-color: $subnav-background-color;
    .dropdown-item {
      color: $subnav-nav-item-color;
      @include hover-focus{
        background-color: $subnav-nav-item-hover-background-color;
      }
    }
  }
}
.navbar-nav-user-nav {
  width: 100%;
  margin: 0 40px;
  padding-top: 5px;
  border-top: 1px solid rgba(255,255,255,0.2);
  @include media-breakpoint-up(md) {
    margin-bottom: 0;
    padding-top: 0;
    padding-bottom: 0;
    margin: 0;
  }
  .s72-btn {
    font-size: 14px;
  }
  .s72-dropdown-toggle {
    font-size: 14px;
    color: #fff;
    text-align: center;
    display: block;
    padding-bottom: 0;
    margin-bottom: 0;
    border-bottom: 0 none;
    box-shadow: 0 none;
    @include media-breakpoint-up(md) {
      font-size: 14px;
      text-align: left;
      display: inline-block;
      padding: 0.375rem 0.75rem;
    }
    @include hover-focus {
      color: $primary;
    }
    &:after {
      display: none;
      @include media-breakpoint-up(md) {
        display: inline-block;
      }
    }
  }
  .s72-dropdown-menu {
    padding: 0;
    width: 100%;
    display: block;

    background: $navbar-background-color;
    border-top: 0 none;

    @include media-breakpoint-up(md){
      width: 190px;
      display: none;
      background: $navbar-background-color;
      padding: $grid-gutter-width / 2;
    }
    &.show {
      @include media-breakpoint-up(md){
        display: block;
      }
    }
    .s72-dropdown-item {
      color: $dropdown-item-color;
      font-size: 12px;
      text-align: center;
      font-weight: 600;
      padding: 8px 12px;
      transition: all .25s ease-out;
      background: transparent;
      @include media-breakpoint-up(md) {
        font-size: 14px;
        text-align: left;
      }
      @include hover-focus {
        color: $primary;
        background: transparent;
      }
      &:active {
        color: $primary;
        background: #000;
      }
    }
    s72-sign-out {
      background: #141414;
      @include hover-focus {
        background: #141414;
      }
    }
    .sign-out {
      @extend .d-flex;
      flex-direction: row;
      justify-content: space-between;
      margin-top: 5px;
      border-bottom: 0 none;
      @include media-breakpoint-up(md) {
        margin-top: 0;
      }
      .s72-dropdown-item {
        font-size: 14px;
      }
      p {
        margin-bottom: 0;
        @extend .s72-dropdown-item;
        @include hover-focus {
          background: transparent;
          color: #fff;
        }
      }
      s72-sign-out {
        margin-left: auto;
        width: auto;
        @include media-breakpoint-up(md) {
          width: 100%;
          margin-left: 0;
        }
      }
    }
  }
}
// Actual Navigation
.sub-nav {
  font-family: $font-family-base;
  display: none;
  background-color: transparent;
  padding: 0 20px;
  @include media-breakpoint-up(md){
    padding-top: 10px;
  }
  @extend .nav;
  @extend .d-md-flex;
  .nav-item {
    font-size: 14px;
    font-weight: 600;
    @include media-breakpoint-up(xxxl){
      font-size: 16px;
    }
    &.active .nav-link {
      color: $subnav-nav-item-hover-background-color;
      border-bottom: 3px solid $subnav-nav-item-hover-background-color;
      opacity: 1;
    }
    .s72-dropdown-menu {
      background: rgba($navbar-background-color, 1);
      padding-left: 15px;
      .nav-link {
        font-size: 14px;
        margin: 0;
        white-space: nowrap;
        @include hover-focus {
          border-bottom-color: transparent;
        }
      }
    }
  }
  .nav-link {
    color: $subnav-nav-item-color;
    border-bottom: 3px solid transparent;
    margin-right: 20px;
    opacity: .6;
    padding-right: 0;
    padding-left: 0;
    @extend .animate-this;
    @include hover-focus{
      @extend .animate-this;
      opacity: 1;
      color: $subnav-nav-item-hover-background-color;
      border-bottom: 3px solid $subnav-nav-item-hover-background-color;
    }
    &.s72-dropdown-toggle {
      @include hover-focus {
        border-bottom: 3px solid transparent;
      }
    }
  }
}
// Header Form Search
.navbar-nav-search {
  position: absolute;
  left: 160px;
  width: 150px;
  top: $navbar-search-top;
  @include media-breakpoint-up(sm) {
    top: $navbar-search-top;
    left: 50%;
    width: 200px;
    transform: translateX(-50%);
    margin-right: $subnav-nav-item-margin-x;
  }
  @include media-breakpoint-up(lg) {
    top: $navbar-search-top;
    left: 50%;
    transform: translateX(-50%);
    width: 350px;
  }
  // Header Search Form Control
  .form-control-search {
    font-size: 10px;
    color: #fff;
    border-color: rgba(255,255,255,0.3);
    background-color: rgba(255,255,255,0.3);
    @include media-breakpoint-up(md){
      font-size: 14px;
    }
    &::placeholder {
      text-align: left;
      color: #fff;
    }
  }
}
// Actual Navigation for Mobile Resolution
.navbar-collapse {
  background: #000;
  overflow: hidden;
  &.navbar-collapse.collapse.show {
    background: transparent;
  }
  @include media-breakpoint-up(md) {
    margin-top: 0;
    padding-top: 0;
    max-height: 100%;
    background: transparent;
    overflow: visible;
  }
  &.show {
    height: auto;
    transition: all .45s ease-in;
    min-height: 100vh;
  }
  .navbar-nav {
    s72-user-anon {
      display: block;
      padding-bottom: 20px;
      margin: 20px;
      padding-top: 15px;
      border-top: 1px solid rgba(255,255,255,0.2);
      @include media-breakpoint-up(md) {
        border-top: 0 none;
        padding: 0;
        margin: 0;
      }
    }
  }
}
ul.mobile-nav {
  background: $navbar-background-color;
  flex-direction: column;
  padding-bottom: $grid-gutter-width / 3;
  padding-top: $grid-gutter-width / 3;
  @extend .nav;
  .nav-item {
    .nav-link {
      color: $mobile-nav-link-color;
      font-size: 14px;
      font-weight: 600;
      text-align: center;
      padding: 8px 10px;
    }
    &.active {
        border-bottom: 0 none;
        .nav-link {
          color: $primary;
        }
    }
    &.title {
      font-size: 12px;
      color: rgba(255,255,255,0.4);
      text-align: center;
      font-weight: 800;
      padding-top: 15px;
      text-transform: uppercase;
    }
  }
}

